--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_DRIVER=pdo_mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_NAME=database
-DB_USER=victor
+DB_USER=root
 DB_PASS=123456
-DB_PORT=4003
+DB_PORT=3306
