--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
  "require-dev": {
     "roave/security-advisories": "dev-master",
     "phpunit/phpunit": "^9",
-    "phpstan/phpstan": "^0.12.9",
-    "squizlabs/php_codesniffer": "2.*",
+    "phpstan/phpstan": "^0.11.8",
     "laminas/laminas-coding-standard": "^1.0"
   },
   "require": {
@@ -30,7 +29,8 @@
     "vlucas/phpdotenv": "^4.1",
     "beberlei/assert": "^3.2",
     "doctrine/orm": "^2.6.2",
-    "robmorgan/phinx": "^0.11.4"
+    "robmorgan/phinx": "^0.11.4",
+    "squizlabs/php_codesniffer": "*"
   },
   "scripts": {
     "check": [
@@ -43,8 +43,8 @@
       "@test-coverage",
       "@pdepend"
     ],
-    "cs-check": "phpcs ./src",
-    "cs-fix": "phpcbf ./src",
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf --no-patch",
     "test": "phpunit --colors=always",
     "analyze": "phpstan analyse ./src --level max --memory-limit=4000M"
   }
